
# Add a serial test
macro( xdm_test_serial test_name )
    include_directories( ${Boost_INCLUDE_DIRS} )
    add_executable( xdm.${test_name}.test ${ARGN} )
    target_link_libraries( xdm.${test_name}.test xdm ${Boost_LIBRARIES} )
    add_test( xdm.${test_name} xdm.${test_name}.test )
endmacro()

xdm_test_serial( BinaryStreamBuffer TestBinaryStreamBuffer.cpp )
xdm_test_serial( BinaryOStream TestBinaryOStream.cpp )
xdm_test_serial( BinaryIStream TestBinaryIStream.cpp )
xdm_test_serial( BinaryIOStream TestBinaryIOStream.cpp )
xdm_test_serial( BinaryStreamOperations TestBinaryStreamOperations.cpp )
xdm_test_serial( TestContiguousArray TestContiguousArray.cpp )
xdm_test_serial( TestXmlObject TestXmlObject.cpp )
xdm_test_serial( TestXmlOutputStream TestXmlOutputStream.cpp )
xdm_test_serial( TestItem TestItem.cpp )
xdm_test_serial( TestDataShape TestDataShape.cpp )
xdm_test_serial( TestThrowMacro TestThrowMacro.cpp )
xdm_test_serial( TestUniformDataItem TestUniformDataItem.cpp )
xdm_test_serial( TestCompositeDataItem TestCompositeDataItem.cpp )
xdm_test_serial( TestCollectMetadataOperation TestCollectMetadataOperation.cpp )
xdm_test_serial( TestObjectCompositionMixin TestObjectCompositionMixin.cpp )
xdm_test_serial( TestRefPtr TestRefPtr.cpp )
xdm_test_serial( TestDataSelectionVisitor TestDataSelectionVisitor.cpp )
xdm_test_serial( TestMemoryAdapter TestMemoryAdapter.cpp )
xdm_test_serial( TestHyperSlabBlockIterator TestHyperSlabBlockIterator.cpp )
xdm_test_serial( TestAlgorithm TestAlgorithm.cpp )
xdm_test_serial( TestStaticAssert TestStaticAssert.cpp )
xdm_test_serial( TestVectorRef TestVectorRef.cpp )

