
macro( xdmGrid_test_serial test_name )
    add_executable( xdmGrid.${test_name}.test ${ARGN} )
    target_link_libraries( xdmGrid.${test_name}.test xdmGrid gtest )
    add_test( xdmGrid.${test_name} xdmGrid.${test_name}.test )
endmacro()

xdmGrid_test_serial( Grid Grid.cpp )
xdmGrid_test_serial( UniformGrid UniformGrid.cpp )
xdmGrid_test_serial( Attribute Attribute.cpp )
xdmGrid_test_serial( CollectionGrid CollectionGrid.cpp )
xdmGrid_test_serial( Domain Domain.cpp )
xdmGrid_test_serial( Geometry Geometry.cpp )
xdmGrid_test_serial( RectilinearMesh RectilinearMesh.cpp )
xdmGrid_test_serial( StructuredTopology StructuredTopology.cpp )
xdmGrid_test_serial( TensorProductGeometry TensorProductGeometry.cpp )
xdmGrid_test_serial( Topology Topology.cpp )
xdmGrid_test_serial( Time Time.cpp )
xdmGrid_test_serial( XdmfGridCompatibility XdmfGridCompatibility.cpp ) 

