
macro( xdmGrid_test_serial test_name )
    include_directories( ${Boost_INCLUDE_DIRS} )
    add_executable( xdmGrid.${test_name}.test ${ARGN} )
    target_link_libraries( xdmGrid.${test_name}.test xdmGrid ${Boost_LIBRARIES} )
    add_test( xdmGrid.${test_name} xdmGrid.${test_name}.test )
endmacro()

xdmGrid_test_serial( Grid TestGrid.cpp )
xdmGrid_test_serial( UniformGrid TestUniformGrid.cpp )
xdmGrid_test_serial( Attribute TestAttribute.cpp )
xdmGrid_test_serial( CollectionGrid TestCollectionGrid.cpp )
xdmGrid_test_serial( Domain TestDomain.cpp )
xdmGrid_test_serial( Geometry TestGeometry.cpp )
xdmGrid_test_serial( RectilinearMesh TestRectilinearMesh.cpp )
xdmGrid_test_serial( StructuredTopology TestStructuredTopology.cpp )
xdmGrid_test_serial( TensorProductGeometry TestTensorProductGeometry.cpp )
xdmGrid_test_serial( Topology TestTopology.cpp )
xdmGrid_test_serial( Time TestTime.cpp )
xdmGrid_test_serial( UnstructuredTopology TestUnstructuredTopology.cpp )
xdmGrid_test_serial( Polyvertex TestPolyvertex.cpp )
xdmGrid_test_serial( InterlacedGeometry TestInterlacedGeometry.cpp )
xdmGrid_test_serial( MultiArrayGeometry TestMultiArrayGeometry.cpp )
xdmGrid_test_serial( ElementTopology TestElementTopology.cpp )
